# C8005-Assn2

./: CMakeLists.txt  NOTE.txt  README.md
documents/: COMP_8005_Results.docx  NOTE.txt
documents/Diagrams/: Client  Threaded Server  brainstorm.txt  epollDiagram.html  selectServer.html
documents/Select Server Results/: Select Server.xlsx  transfers.csv
documents/Threaded Server Results/: Threaded Server.xlsx  transfers.csv
include/assn2/client/: client.h
include/assn2/common/: protocol.h
include/assn2/server/: acceptor.h  client.h  done.h  server.h
include/assn2/util/: log.h  ring_buffer.h  timing.h  vector.h
src/client/: CMakeLists.txt  main.c
src/common/: protocol.c
src/server/: CMakeLists.txt  acceptor.c  epoll_server.c  main.c  select_server.c  server.c  thread_server.c
src/util/: CMakeLists.txt  log.c  ring_buffer.c  vector.c
